syntax = "proto3";

package entity;

option go_package = "github.com/d-jo/webcrawler/entity";

message StartCommand {
  string url = 1;
}

message StopCommand {
  string url = 1;
}

message ListCommand {
}

message CrawledPage {
  string url = 1;
  repeated CrawledPage children = 2;
}

message ListResponse {
  bool success = 1;
  string message = 2;
  repeated CrawledPage root = 3;
}

message GenericResponse {
  bool success = 1;
  string message = 2;
}